fix(style): fix youtube music player layout not aligned issue

--- a/src/youtube-music.css
+++ b/src/youtube-music.css
@@ -73,6 +73,8 @@ tp-yt-paper-item.ytmusic-guide-entry-renderer::before {
 #av-id ~ #player.ytmusic-player-page:not([player-ui-state="FULLSCREEN"]) {
   margin-top: auto !important;
   margin-bottom: auto !important;
+  margin-left: var(--ytmusic-player-page-vertical-padding);
+  margin-right: var(--ytmusic-player-page-vertical-padding);
   max-height: calc(100% - (var(--ytmusic-player-page-vertical-padding) * 2));
   max-width: calc(100% - var(--ytmusic-player-page-vertical-padding) * 2);
 }
